fixed button on iphone

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -33,6 +33,7 @@ a.landing-click-here {
 	font-size:13px;
 	cursor:pointer;
 	margin-top:-2px;
+	-webkit-appearance: none;
 }
 
 .submit-button:hover {
